fix: adding hash when navigate; jumping scroll when adding hash; cleanup (#216)
* init cleanup

* fix: fix adding hashes; cleanup

--- a/theme/assets/css/main.css
+++ b/theme/assets/css/main.css
@@ -93,14 +93,6 @@ body {
   }
 }
 
-@screen xl {
-  .nuxt-content {
-    & h2, & h3 {
-      scroll-margin-block: var(--scroll-margin-block);
-    }
-  }
-}
-
 .dark {
   & .nuxt-content {
     & h2 {
